apply plugin: 'application'
apply plugin: 'eclipse'

sourceCompatibility = "1.10"
targetCompatibility = "1.10"

repositories {
    jcenter()
}

dependencies {
    compile project(':')
    
    compile 'com.google.code.gson:gson:2.8.2'
    compile "com.sparkjava:spark-core:2.7.2"
    compile 'org.slf4j:slf4j-simple:1.6.1'

    // Use JUnit test framework
    testCompile 'junit:junit:4.12'
}

tasks.withType(AbstractCompile) {
  options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

tasks.withType(Test) {
  jvmArgs += ["--add-modules", "jdk.incubator.httpclient"]
}

mainClassName = "titan.ccp.kiekerbridge.raritan.RaritanKiekerBridge"

applicationDefaultJvmArgs = ["--add-modules=jdk.incubator.httpclient"]

eclipse {
    classpath {
       downloadSources=true
       downloadJavadoc=true
    }
}